tests/typecheck/fail/module_scope_rebind.tw
// Rebinding a pub binding at module scope is not allowed
pub x := 10
x = 20
